--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,5 +22,6 @@
   "iosLocationServiceOffStep2": "Make sure that <1>Location Services</1> is on",
   "androidLocationServiceOffStep1": "Go to <1>Settings</1> > <1>Security & Location</1> > <1>Location</1>",
   "androidLocationServiceOffStep2": "Make sure that <1>Use Location</1> is on",
-  "chooseLanguage": "Choose your preferred language"
+  "chooseLanguage": "Choose your preferred language",
+  "offlineMessage": "No Internet Connection"
 }
