--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -22,5 +22,6 @@
   "iosLocationServiceOffStep2": "<1> இருப்பிட சேவைகள் </ 1> இயக்கப்பட்டிருப்பதை உறுதிசெய்க",
   "androidLocationServiceOffStep1": "<1> அமைப்புகள் </ 1>> <1> பாதுகாப்பு மற்றும் இருப்பிடம் </ 1>> <1> இருப்பிடம் </ 1>",
   "androidLocationServiceOffStep2": "<1> இருப்பிடத்தைப் பயன்படுத்து </ 1> இயக்கப்பட்டிருப்பதை உறுதிசெய்க",
-  "chooseLanguage": "உங்களுக்கு விருப்பமான மொழியைத் தேர்வுசெய்க"
+  "chooseLanguage": "உங்களுக்கு விருப்பமான மொழியைத் தேர்வுசெய்க",
+  "offlineMessage": "இணைய இணைப்பு இல்லை"
 }
